# perpee

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md
.claude/: settings.local.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 43eb54068552_initial_tables.py
backend/config/: settings.py  stores_seed.py
backend/config/prompts/: extract_product.txt  regenerate_selectors.txt  scan_website.txt  system.txt
backend/src/agent/: __init__.py  agent.py  dependencies.py  guardrails.py  tools.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/api/routes/: __init__.py  alerts.py  chat.py  health.py  products.py  schedules.py  stores.py
backend/src/api/schemas/: __init__.py  alerts.py  chat.py  common.py  products.py  schedules.py  stores.py
backend/src/core/: __init__.py  constants.py  exceptions.py  security.py
backend/src/database/: __init__.py  models.py  repository.py  session.py
backend/src/healing/: __init__.py  detector.py  health.py  regenerator.py  service.py
backend/src/notifications/: __init__.py  service.py
backend/src/notifications/channels/: __init__.py  email.py
backend/src/notifications/templates/: __init__.py  back_in_stock.html  price_alert.html  product_error.html  renderer.py  store_flagged.html
backend/src/rag/: __init__.py  embeddings.py  search.py  service.py  sync.py
backend/src/scheduler/: __init__.py  batching.py  jobs.py  service.py  triggers.py
backend/src/scraper/: __init__.py  block_detection.py  engine.py  rate_limiter.py  retry.py  robots.py  sanitization.py  strategies.py  user_agent.py  validators.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_healing.py  test_phase1.py  test_rag.py  test_scheduler.py  test_scraper.py
docker/: Dockerfile  docker-compose.yml
docs/: change_logs.md  project_status.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
referrence/: PRD PERPEE.md  TECHNICAL_SPEC PERPEE.md
(+36 files in other folders)
