[project]
name = "perpee"
version = "0.1.0"
description = "AI-powered price monitoring agent for Canadian online retailers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "websockets>=14.0",

    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",

    # Vector Database (RAG)
    "chromadb>=0.5.20",
    "openai>=1.57.0",

    # AI Agent
    "pydantic-ai>=0.0.15",
    "httpx>=0.28.0",

    # Web Scraping
    "crawl4ai>=0.4.248",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",

    # Scheduling
    "apscheduler>=3.10.4",
    "croniter>=3.0.0",

    # Email
    "resend>=2.5.0",

    # Web Search
    "duckduckgo-search>=7.1.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "bleach>=6.2.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
